# lesson28

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  requirements.txt  skypro_l28.sql
Docker_test/: Dockerfile  docker-compose.yaml
ads/: Validators.py  admin.py  filters.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
ads/migrations/: 0001_initial.py  0002_alter_ad_is_published.py  0002_initial.py  0003_alter_ad_options_alter_author_options_and_more.py  0003_remove_category_slug.py  0004_alter_location_name.py  0004_remove_author_location_author_location.py  0005_category_slug.py  0005_rename_location_author_location_id.py  0006_alter_location_lat_alter_location_lng.py  0007_alter_ad_options_alter_author_options_and_more.py
advertisement/: pyproject.toml
advertisement/tests/: test_advertisement.py
fixtures/: ad.json  location.json  user.json
helpers/: functions.py
my_project/: settings.py  urls.py
postgres_l28/: docker-compose.yaml
skymarket/ads/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
skymarket/advertisement/: pyproject.toml
skymarket/fixtures/: selections.json  user.json
skymarket/skymarket/: settings.py  urls.py
skymarket/tests/: __init__.py  tests.py
skymarket/users/: email.py  models.py  serializers.py  urls.py  views.py
tests/: conftest.py  factories.py  fixtures.py  tests.py
tests/ads/: adv_create_test.py
tests/cat/: test_cat.py
tests/selection/: test_selection.py
users/: models.py  serializers.py  urls.py  views.py
(+24 files in other folders)
